# workout_tracker

./: CMakeLists.txt  ex.py  expwm.py
config/: app.yaml
include/app/: App.hpp  Config.hpp
include/comm/: BLEClient.hpp
include/control/: MotorController.hpp  ServoController.hpp  StepperController.hpp
include/inference/: PoseEstimator.hpp
src/: main.cpp
src/app/: App.cpp  Config.cpp
src/comm/: BLEClient.cpp
src/control/: MotorController.cpp  ServoController.cpp  StepperController.cpp
src/inference/: PoseEstimator.cpp
src/py_inference/: example.py
